<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vermelho_escuro"
    tools:context="pagina3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/white"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:text="@string/qual_sua_faixa_de_renda_mensal_m_dia"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="394dp"
            android:layout_height="304dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/perg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_r_1_000"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/perg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/de_r_1_001_at_r_5_000"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/perg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/de_r_5_001_at_r_10_000"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/perg4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acima_de_r_10_000"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="245dp"
            android:layout_height="63dp"
            android:layout_marginTop="52dp"
            android:text="@string/proximo_P"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>